Fixed not working download buttons The  not working download buttons for PLS-DA and PLS are now working and are visible again.

--- a/inst/app/www/css/custom.css
+++ b/inst/app/www/css/custom.css
@@ -72,9 +72,3 @@ label[id*='ncomp-label'], label[id*='matrix-label'], label[for='upload-omicsAnal
 div#DIABLO-img\.comp{
   display: none;
 }
-
-/* Remove not working buttons */
-#PLSDA-ErrorRate\.download, #sPLS-Tuned\.ncomp\.download,
-#sPLS-Tuned\.keepX\.download, #sPLS-Tuned\.keepY\.download{
-  display: none;
-}
